fix: modal overflowing

--- a/src/css/blocks/_logo.scss
+++ b/src/css/blocks/_logo.scss
@@ -13,6 +13,7 @@
 		max-block-size: 100%;
 		object-fit: contain;
 		transition: transform var(--transition-duration) var(--transition-function);
+		filter: drop-shadow(0 0 var(--size-border-thin) oklch(from var(--color-thunder) l c h / var(--opacity-beta)));
 	}
 
 	&[href]:is(:hover, :focus, :active) {
