--- a/src/css/blocks/_settings.scss
+++ b/src/css/blocks/_settings.scss
@@ -49,6 +49,7 @@
 	padding: var(--size-tiny);
 	margin-inline-start: 1ex;
 	border-radius: 50%;
+	filter: drop-shadow(0 0 var(--size-border-thin) oklch(from var(--color-thunder) l c h / var(--opacity-beta)));
 
 	svg {
 		@include mixins.non-interactive;
